# drum-city

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
assets/images/: space-readme.txt
assets/shaders/: aura.wgsl  circle.wgsl  custom_material.wgsl  myshader.wgsl  myshader2.wgsl  myshader_2d.wgsl  sky_shader.wgsl  uv.wgsl
assets/songs/: akisey-dance-medium.toml  akisey-dance.toml  map.toml
src/: TIL.md  TODO.md  arrows.rs  audio.rs  consts.rs  debug.rs  main.rs  map_maker.rs  menu.rs  score.rs  time.rs  types.rs  ui.rs
src/shaders/: background.rs  mod.rs
