[package]
name = "drum-city"
version = "0.1.0"
edition = "2021"

## -- Performance optimizations from: https://bevyengine.org/learn/book/getting-started/setup/ -- ##
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
opt-level = 3

[dependencies]
bevy = "0.12.0"
# bevy = { version = "0.12.0", features = ["dynamic_linking"] }
